--- a/FINALEXAM.html
+++ b/FINALEXAM.html
@@ -3,33 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
+    <title>Flexbox Layout</title>
 </head>
 <body>
-    <main id="main">
-        <h1 id="title">FINAL EXAM</h1>
-        <p>basic techniques</p>
-        <figure id="img-div">
-          <img
-            id="image"
-            src="hahahaha.jpg"
-            alt="LOML"/>
- <nav>        
-<ul>
-    <li>glenn</li>
-    <li>pogi</li>
-    <li>best jungler</li>
-    <li>yss</li>
-    <li>ling</li>
-</ul>
-
-
-    </nav>
-    <footer>
-        <link rel="'import" href="component.html">
-        <p>HAHAHHAAHHAHAHAHha</p>
-    </footer>
+    <header>
+        <h1>Flexbox Layout Example</h1>
+    </header>
     
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+
+    <div class="main-content">
+        <article>
+            <h2>Article 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis magna a ipsum cursus porta.</p>
+        </article>
+        <article>
+            <h2>Article 2</h2>
+            <p>Sed eu dui quis purus tincidunt venenatis. Donec eget dolor at ipsum sagittis aliquet.</p>
+        </article>
+        <article>
+            <h2>Article 3</h2>
+            <p>Phasellus eget quam id elit sollicitudin rutrum. Vivamus finibus euismod nulla, vel euismod orci.</p>
+        </article>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Flexbox Layout Example</p>
+    </footer>
 </body>
 </html>
